assert( p_sys->b_active ) failed
when I repeat to click my machine with pulse://alsa_input,vlc goes to crash.And print ‘p_sys->b_active’ in terminal. machine
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- huangjieNT changed milestone to %4.0
changed milestone to %4.0
- huangjieNT added Component::Core: Input label
added Component::Core: Input label
- huangjieNT changed the description
changed the description
- Thomas Guillem assigned to @tguillem
assigned to @tguillem
- Author Contributor
@tguillem I find the reason why vlc crash is pulse moudle calls the
es_out_SetPCR
before a new input thread created. - Maintainer
@huangjieNT Yes I know, it's a regression from 800482fb I was unaware that we had asynchronous access_demux.
Collapse replies - Author Contributor
@tguillem hello,how about change like this in es_out.c:
input_thread_private_t *priv = input_priv(p_sys->p_input); if( p_pgrm->active_clock_source == VLC_CLOCK_MASTER_AUTO && priv->i_state == PLAYING_S) { EsOutProgramHandleClockSource( out, p_pgrm ); assert( p_pgrm->active_clock_source != VLC_CLOCK_MASTER_AUTO ); } if(priv->i_state == OPENING_S) { return VLC_EGENERIC; }
Init( input_thread_t * p_input )
in input.c should be initialized completely,and Ignore the condition:priv->i_state == OPENING_S
.Edited by huangjieNT - Maintainer
We should not fail (return VLC_EGENERIC) ES_OUT_SET_PCR commands.
Cf. !463 (merged)
- Maintainer
@huangjieNT Thanks for the report!
- Please register or sign in to reply
- Thomas Guillem closed with merge request !463 (merged)
closed with merge request !463 (merged)
- Thomas Guillem closed with commit 88ad68a9
closed with commit 88ad68a9