es_out: restore the previous ES_OUT_SET_PCR behavior

ES_OUT_SET_PCR can now be called anytime (even from the open cb) and
from any threads. The behavior was changed in
800482fbd2a1d3169a920f7b883590a6ff23949a.

This fixes assert with asynchronous accesses like pulse that could
configure the clock without being started by the input (via
ES_OUT_PRIV_SET_MODE)

Fixes #25947